<resources>
    <string name="app_name">Tienda Virtual</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Usuario</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_mispedidos">Mis pedidos</string>
    <string name="menu_catalogo">Productos</string>
    <string name="submenu_productos">Productos</string>
    <string name="submenu_buscar">Buscar</string>
    <string name="submenu_filtrar">Filtrar</string>
    <string name="simbolo_soles">S/ </string>
    <string name="menu_catalogo_home" />
    <string name="val_et_password">contraseña</string>
    <string name="val_et_usuario">correo electronico</string>
    <string name="val_btn_login">ingresar</string>
    <string name="val_btn_registro">Registrarse</string>
    <string name="val_btn_google">Ingresar con Google</string>
    <string name="menu_logout">Cerrar sesion</string>
    <string name="action_logout">Cerrar sesion</string>
    <string name="val_btn_registrar">No esta registrado?</string>
    <string name="val_btn_reestablecer_pass">Olvido su contraseña?</string>
    <string name="val_btn_registrarse">Registrarse</string>
    <string name="val_et_password2">Repetir contraseña</string>
    <string name="val_et_usuario_nombre">Ingrese su nombre</string>
    <string name="tv_titulo_registro">Crea una cuenta</string>
    <string name="val_detalle_color">Color</string>
    <string name="val_detalle_precio">Precio</string>
    <string name="val_btn_add_cart">Añadir al carro</string>
    <string name="val_fragment_detalle_producto">Detalle del producto</string>
    <string name="label_carrito">Mi carrito de compras</string>
    <string name="val_btn_checkout">checkout</string>
    <string name="val_total">Sub-Total:</string>
    <string name="val_cantidad">Cantidad de productos</string>
    <string name="val_buscar">Buscar</string>
    <string name="menu_profile">Mi perfil</string>
    <string name="label_checkout">Checkout</string>
    <string name="label_userupdate_checkout">Actualizar datos del cliente</string>
    <string name="val_et_paterno">Apellido paterno</string>
    <string name="val_et_materno">Apellido materno</string>
    <string name="val_et_dni">Ingrese su DNI</string>
    <string name="val_et_phone">Ingrese su celular</string>
    <string name="tv_chk_user_data">Para proceder con su pedido es necesario que complete sus datos, gracias:</string>
    <string name="val_et_direccion">Ingrese su direccion</string>
    <string name="val_btn_userchk">Guardar</string>
    <string name="val_btn_edit_user">Cambiar</string>
    <string name="val_direccio_entrega">Detalles de entrega</string>
    <string name="val_pedido">Resumen del pedido:</string>
    <string name="val_nombre">Nombre:</string>
    <string name="val_direccio">Direccion:</string>
    <string name="val_celu">Celular:</string>
    <string name="val_dni">DNI:</string>
    <string name="val_total_pedido">Total del pedido:</string>
    <string name="val_pedido_costo">Envio:</string>
    <string name="val_costo_pedido">S/ 15</string>
    <string name="val_btn_confirmar">Confirmar pedido</string>
    <string name="val_btn_pay">Pagar</string>
    <string name="val_tv_pago">Por favor ingrese los datos de su tarjeta:</string>

</resources>